--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1495,7 +1495,7 @@ button,
   background-color: transparent;
   border-radius: 0.375em;
   border: 0;
-  box-shadow: inset 0 0 0 2px #f56a6a;
+  box-shadow: inset 0 0 0 2px #8C7E51;
   color: #8C7E51 !important;
   cursor: pointer;
   display: inline-block;
@@ -1515,13 +1515,15 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover {
-    background-color: rgb(140,44,35); }
+    background-color: rgb(140,44,35);
+    color: white;}
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
   button:active,
   .button:active {
-    background-color: rgb(140,44,35); }
+    background-color: rgb(140,44,35);
+    color: white; }
   input[type="submit"].icon:before,
   input[type="reset"].icon:before,
   input[type="button"].icon:before,
@@ -1553,7 +1555,7 @@ button,
   input[type="button"].primary,
   button.primary,
   .button.primary {
-    background-color: #f56a6a;
+    background-color: #592816;
     box-shadow: none;
     color: #ffffff !important; }
     input[type="submit"].primary:hover,
@@ -1561,13 +1563,13 @@ button,
     input[type="button"].primary:hover,
     button.primary:hover,
     .button.primary:hover {
-      background-color: #f67878; }
+      background-color: rgb(140,44,35); }
     input[type="submit"].primary:active,
     input[type="reset"].primary:active,
     input[type="button"].primary:active,
     button.primary:active,
     .button.primary:active {
-      background-color: #f45c5c; }
+      background-color: rgb(140,44,35); }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
